# ChatSnipServer

./: .gitignore  README.md  pyproject.toml
src/chatsnipserver/: admin.py  apps.py  forms.py  models.py  serializers.py  services.py  signals.py  test_runner.py  urls.py  views.py
src/chatsnipserver/fixtures/: filename_patterns.json  programming_languages_patterns.json
src/chatsnipserver/migrations/: 0001_initial.py  0002_alter_chat_user_chatimage.py  0003_chatimage_blacklisted.py  0004_alter_chatimage_source_url.py  0005_chatimage_checksum.py  0006_rename_content_chat_markdown_chat_json_data.py  0007_alter_chat_json_data_alter_chat_markdown.py  0008_chat_images_downloaded.py  0009_chat_chatbot_chat_llm_model.py  0010_alter_chat_tags.py
src/chatsnipserver/templates/chatsnip/: base.html  base_sceleton.html  chat_confirm_delete.html  chat_detail.html  chat_form.html  chat_list.html  codefragment_confirm_delete.html  codefragment_form.html  codefragment_list.html  extension_detail.html  profile_form.html
src/chatsnipserver/templatetags/: markdown_extras.py
src/chatsnipserver/tests/: test_models.py  test_services.py  test_views.py
testsite/testsite/: settings.py  urls.py
